--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 <button class="service-btn">Chat Now →</button>
             </div>
 
-            <div class="service-card" onclick="location.href='upload.html'">
+            <div class="service-card" onclick="location.href='uploadResume.html'">
                 <div class="service-icon">📄</div>
                 <h3>Upload Resume</h3>
                 <p>Keep your resume updated and ready for recruiters</p>
